[gd_scene load_steps=7 format=3 uid="uid://bwainceojfqa6"]

[ext_resource type="Script" path="res://pathgen.gd" id="1_e13bc"]
[ext_resource type="Script" path="res://tracks/wheel.gd" id="2_ut2pe"]
[ext_resource type="Script" path="res://treads.gd" id="4_2bhu8"]

[sub_resource type="Curve3D" id="Curve3D_bt206"]

[sub_resource type="BoxMesh" id="BoxMesh_slfes"]

[sub_resource type="MultiMesh" id="MultiMesh_mvixt"]
transform_format = 1
instance_count = 1
mesh = SubResource("BoxMesh_slfes")
buffer = PackedFloat32Array(5.32493e-44, 5.1848e-44, 5.88545e-44, 5.74532e-44, 5.32493e-44, 5.60519e-44, 5.46506e-44, 5.32493e-44, 5.74532e-44, 5.60519e-44, -1.34218e+08, -1.34218e+08)

[node name="Node3D" type="Node3D"]

[node name="Path3D" type="Path3D" parent="."]
curve = SubResource("Curve3D_bt206")
script = ExtResource("1_e13bc")

[node name="Objects" type="Node3D" parent="Path3D"]

[node name="Idle1" type="Node3D" parent="Path3D/Objects"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0.5, 0)
script = ExtResource("2_ut2pe")
_radius = 1.5

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="Path3D/Objects/Idle1"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
radius = 1.5
height = 0.1

[node name="Idle2" type="Node3D" parent="Path3D/Objects"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0, 0)
script = ExtResource("2_ut2pe")

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="Path3D/Objects/Idle2"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
radius = 1.0
height = 0.1

[node name="Driver1" type="Node3D" parent="Path3D/Objects"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 3, 0)
script = ExtResource("2_ut2pe")

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="Path3D/Objects/Driver1"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
radius = 1.0
height = 0.1

[node name="Driver2" type="Node3D" parent="Path3D/Objects"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 4, 0)
script = ExtResource("2_ut2pe")
_radius = 1.5

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="Path3D/Objects/Driver2"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
radius = 1.5
height = 0.1

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 12)

[node name="MultiMeshInstance3D" type="MultiMeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
multimesh = SubResource("MultiMesh_mvixt")
script = ExtResource("4_2bhu8")
